Fixed spacing for mobile displaying.

--- a/frontend/src/styles/general.css
+++ b/frontend/src/styles/general.css
@@ -1,3 +1,1 @@
-html, body {
-  overflow: hidden;
-}
+/* Already being imported. Any needed general style can be added here. */
